--- a/css/custom.css
+++ b/css/custom.css
@@ -8697,6 +8697,16 @@ header.masthead h1 {
     color:  whitesmoke;
     font-size:  25px;
 }
+.bnt_link{
+    font-family: Merriweather Sans;
+    padding: 10px;
+    width: 25%;
+    float:right;
+    margin-bottom: -40px;
+    background-color: #f4623a;
+    color: white; 
+    border: none;
+}
 
 @media (max-width: 410px){
   .boneco_1{margin-left: -40%;width: 130%;margin-top: 30px;}
@@ -8771,3 +8781,4 @@ header.masthead p{font-size: 1.9rem !important;}
 .s_child_left {width: 50%!important;margin-right: 10%!important;}
 .btn-xl {padding: 1.25rem 4.25rem!important;font-size: 1.3rem!important;} 
 }
+
